# deform_ext_autocomplete

./: .gitignore  .pylintrc  .travis.yml  CHANGES.rst  LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
deform_ext_autocomplete/: __init__.py  tests.py
deform_ext_autocomplete/templates/: ext_autocomplete_input.pt
deform_ext_autocomplete/templates/readonly/: ext_autocomplete_input.pt
demo/: add.pt  app.py  edit.pt  index.pt  readonly.pt  saved.pt
docs/: Makefile  advanced.rst  api.rst  basic.rst  conf.py  demoapp.rst  dev.rst  index.rst
docs/_build/doctrees/: advanced.doctree  api.doctree  basic.doctree  changes.doctree  demoapp.doctree  dev.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  advanced.html  api.html  basic.html  changes.html  demoapp.html  dev.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: api.txt  basic.txt  demoapp.txt  dev.txt  index.txt
src/deform_ext_autocomplete/: __init__.py
tests/: test_browser.py  test_includeme.py  test_widget.py
tests/demo/: app.py
