[metadata]
name = deform_ext_autocomplete
version = 1.0
description = Deform Extended Autocomplete provides a Deform autocompletion widget that stores a value that may be different from the one shown to the user.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://deform-ext-autocomplete.readthedocs.io/en/latest/
author = Damien Baty
author_email = damien.removethispart@damienbaty.com
license = BSD-3-Clause
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords = deform form widget autocomplete autocompletion
platform = any
project_urls =
    Documentation = https://deform-ext-autocomplete.readthedocs.io/en/latest/
    Source = https://github.com/dbaty/deform_ext_autocomplete/
    Bug Tracker =  https://github.com/dbaty/deform_ext_autocomplete/issues

[options]
install_requires =
    deform
    pyramid_chameleon
python_requires = >=3.6
package_dir=
    =src
packages=find:

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
